clusters/core-ci/ci-operator-configresolver/ci-operator-configresolver.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: ci
  labels:
    app: prow
    component: ci-operator-configresolver
  name: ci-operator-configresolver
spec:
  ports:
  - name: main
    port: 80
    protocol: TCP
    targetPort: main
  - name: ui
    port: 8082
    protocol: TCP
    targetPort: ui
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: metrics
  selector:
    app: prow
    component: ci-operator-configresolver
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prow
    component: ci-operator-configresolver
  name: ci-operator-configresolver-ui
  namespace: ci
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: ui
  to:
    kind: Service
    name: ci-operator-configresolver
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: prow
    component: ci-operator-configresolver
  name: ci-operator-configresolver
  namespace: ci
spec:
  port:
    targetPort: main
  to:
    kind: Service
    name: ci-operator-configresolver
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ci
  name: ci-operator-configresolver
  annotations:
    keel.sh/policy: force
    keel.sh/matchTag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 5m"
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: prow
      component: ci-operator-configresolver
  template:
    metadata:
      labels:
        app: prow
        component: ci-operator-configresolver
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker-prow-services: worker-prow-services
      tolerations:
      - key: node-role.kubernetes.io/worker-prow-services
        operator: Equal
        value: worker-prow-services
        effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node.kubernetes.io/instance-type
                operator: NotIn
                values:
                - r5.4xlarge
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: component
                  operator: In
                  values:
                  - ci-operator-configresolver
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: git-sync
        resources:
          requests:
            memory: "512Mi"
            cpu: "100m"
        command:
        - /git-sync
        args:
        - --repo=https://github.com/openshift/release.git
        - --ref=main
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        imagePullPolicy: Always
        volumeMounts:
        - name: release
          mountPath: /tmp/git-sync
      - name: ci-operator-configresolver
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_ci-operator-configresolver_latest
        imagePullPolicy: Always
        args:
        - -release-repo-git-sync-path=/var/repo/release
        - -log-level=debug
        ports:
        - name: main
          containerPort: 8080
        - name: ui
          containerPort: 8082
        - name: metrics
          containerPort: 9090
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 3
          timeoutSeconds: 600
        volumeMounts:
        - name: release
          mountPath: /var/repo
          readOnly: true
        resources:
          requests:
            memory: "3Gi"
            cpu: "200m"
      serviceAccountName: ci-operator-configresolver
      volumes:
      - name: release
        emptyDir: {}
